--- a/src/App.css
+++ b/src/App.css
@@ -77,14 +77,24 @@ button {
   width: 100%;
 }
 
-/* --- HomeBtns.js --- */
-.home-btns {
-  width: 30%;
-  margin-top: -25%;
-  margin-left: 30%;
+.main {
+  position: relative;
+  height: 950px;
+  overflow: hidden;
+
+  background: url("../src/assets/images/homeimage.png") no-repeat center;
+  background-size: cover;
 }
 
-.homeBtn {
-  width: 240%;
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);  
 }
+
+/* --- HomeBtns.js --- */
+
+
+
 
