--- a/src/App.css
+++ b/src/App.css
@@ -65,12 +65,6 @@
   height: 100px;
 }
 
-img,
-video,
-button {
-  display: block;
-}
-
 /* <------------------ Home.js ------------------> */
 .background {
   height: 100%;
@@ -99,7 +93,6 @@ button {
     background-size: cover;
   }
 }
-
 
 /* <------------------ HomeBtns.js ------------------> */
 
@@ -131,12 +124,12 @@ background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 10
   padding: 10px;
   }
 
-.home-btn:hover, .home-btn:focus {
+.btn:hover, .btn:focus {
   color: #313133;
   transform: translateY(-6px);
 }
 
-.home-btn::after {
+.btn::after {
   content: '';
   width: 30px; height: 30px;
   border-radius: 100%;
@@ -162,26 +155,51 @@ background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 10
   }
 }
 
-/* <------------------ Game.js ------------------> */
-.game-btn {
-  min-width: 300px;
-  min-height: 60px;
-  font-family: 'Nunito', sans-serif;
-  font-size: 22px;
-  text-transform: uppercase;
-  letter-spacing: 1.3px;
-  font-weight: 700;
-  color: #313133;
-  background: #4FD1C5;
-background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
-  border: none;
-  border-radius: 1000px;
-  box-shadow: 12px 12px 24px rgba(79,209,197,.64);
-  transition: all 0.3s ease-in-out 0s;
+/* <------------------ WebcamPlayer.js ------------------> */
+.multi-button button {
+  width: 40%;
+  font-size: 70%;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 1.5%;
+  border: 1px solid black;
   cursor: pointer;
-  outline: none;
   position: relative;
-  padding: 10px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.take-pic::after {
+  content: "";
+  background-color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.take-pic:hover::after {
+  top: 0px;
+  left: 0px;
+}
+
+.send-pic::after {
+  content: "";
+  background-color: #dcbaff;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.send-pic:hover::after {
+  top: 0px;
+  left: 0px;
 }
 
 
