--- a/src/App.css
+++ b/src/App.css
@@ -66,41 +66,19 @@
 }
 
 /* <------------------ Home.js ------------------> */
-.background {
-  height: 100%;
-  width: 100%;
-}
-
 .main {
-  position: relative;
-  height: 950px;
-  overflow: hidden;
-
-  background: url("../src/assets/images/homeimage.png") no-repeat center;
-  background-size: cover;
-}
-
-.container {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);  
-}
-
-@media screen and (max-width: 576px) {
-  .main {
-    background: url("../src/assets/images/homeimage-responsive.png") no-repeat center;
-    background-size: cover;
-  }
+  width: 100%;
+  height: 100%;
+  background-color: #85A1AD;
 }
 
 /* <------------------ HomeBtns.js ------------------> */
 
 .home-btns {
-  height: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
+  padding: 5%;
 }
 
 .home-btn {
@@ -155,6 +133,7 @@ background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 10
   }
 }
 /* <------------------ Game.js ------------------> */
+
 .vs {
   padding-top: 200%;
   font-size: 5em;
@@ -613,4 +592,23 @@ border-radius: 90px 90px 0px 0px;
   .error__nav {
     margin-top: 20px;
   }
+}
+
+/* <------------------ Media queries ------------------> */
+@media only screen and (max-width: 450px) {
+  .main {
+    width: auto;
+    height: 2000px;
+  }
+  .home-pic {
+    width: 400px;
+  }
+}
+
+@media (max-width: 664px) {
+  .main {
+    width: auto;
+    height: 2000px;
+  }
+
 }
